--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-# .travis.yml
 language: node_js
 node_js:
-  - '14'
+  - '10'
 branches:
   only:
     - master
@@ -11,4 +10,4 @@ script:
   - git config --global user.name "${GH_NAME}"
   - git config --global user.email "${GH_EMAIL}"
   - echo "machine github.com login ${GH_NAME} password ${GH_TOKEN}" > ~/.netrc
-  - cd website && yarn install && GIT_USER="${GH_NAME}" yarn run publish-gh-pages
+  - yarn && GIT_USER="${GH_NAME}" yarn deploy
